# prime_YunhongFeng

./: CHANGELOG.md  CONTRIBUTING.md  README.md  hw7.ipynb  prime.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
hw7/: pyproject.toml
hw7/prime_yf2675/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
hw7/prime_yf2675/docs/: Makefile  example.ipynb
hw7/prime_yf2675/tests/: test_prime.py
prime_test/: test_prime.py
src/prime_yf2675/: __init__.py
src_yf2675/pkg1/: __init__.py
tests/: hw7 pytest.ipynb  test_pkg1.py  test_prime_yf2675.py
