[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Yunhong Feng <yf2675@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
myst-nb = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
